--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -2,9 +2,11 @@
 
 @main("Chat") {
 
-  <div id="login-div">
+  <div id="login-div" >
     <h2>Login</h2>
     Username: <input type="text" id="username">
+    <br>
+    Password: <input type="password" id="password">
     <br>
     <button onclick="login()">login</button>
 
@@ -18,6 +20,7 @@
     <br>
     <input type="text" id="input" size="80">
     <button onclick="send()">Send</button>
+    <button onclick="logout()">Logout</button>
   </div>
 
   <!-- csrfToken -->
@@ -25,6 +28,8 @@
 
   <!-- routes -->
   <input type="hidden" id="validate-route" value="@routes.HomeController.validateLogin">
+  <input type="hidden" id="socket-route" value="@routes.HomeController.socket.absoluteURL()">
+  <input type="hidden" id="socket-session-route" value="@routes.HomeController.socketSession.absoluteURL()">
 
   <!-- javascript -->
   <script src="@routes.Assets.versioned("javascripts/chat.js")"></script>
