--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -34,6 +34,7 @@
   <input type="hidden" id="socket-route" value="@routes.HomeController.socket.absoluteURL()">
   <input type="hidden" id="socket-session-route" value="@routes.HomeController.socketSession.absoluteURL()">
   <input type="hidden" id="logout-route" value="@routes.HomeController.logout">
+  <input type="hidden" id="logged-value" value="@false">
 
   <!-- javascript -->
   <script src="@routes.Assets.versioned("javascripts/chat.js")"></script>
